--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,5 +19,5 @@ steps:
     npm install
     npm run build
   displayName: 'npm install, build'
-    npm test
+    npm run test
   displayName: 'npm install, build, and test'
